# hashcode-2021-practice

./: pyproject.toml
hashcode_2021_practice/: __init__.py  hc.py
tests/: test_hashcode_2021_practice.py
